--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -16,12 +16,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "naive-ui": "^2.34.2",
+    "pinia": "^2.0.26",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "@vitejs/plugin-vue": "^3.2.0",
+    "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-vue": "^8.4.1",
+    "postcss": "^8.4.7",
+    "postcss-scss": "^4.0.3",
+    "sass": "^1.49.8",
+    "stylelint": "^14.6.0",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
+    "vite-plugin-mkcert": "^1.9.0",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue-eslint-parser": "^8.3.0",
     "vue-tsc": "^1.0.9"
   }
 }
