--- a/packages/web-app/docker-compose.production.yml
+++ b/packages/web-app/docker-compose.production.yml
@@ -6,8 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: voicel-web-app-production
-    networks:
-      - default
+    restart: always
     ports:
       - "80"
     volumes:
