fix(backend): for install mediasoup lib need python3-pip

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,6 +1,8 @@
 # Base project configuration
 FROM node:18.7.0-buster as build
 
+RUN apt update & apt install python3-pip
+
 RUN npm i -g @nestjs/cli
 
 COPY package*.json ./
