--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "3000"
   web-app:
     build:
-      context: ./packages/frontend
+      context: ./packages/web-app
       dockerfile: Dockerfile
     container_name: voicel-web-app-production
     restart: always
