fix(cicd): Fix trouble dependencies

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "contributors": [
-    "Danila Fokin",
+    "Danila Fokin <fokin@volsu.ru",
     "Maxim Mostovoy <maxmonsta@gmail.com>",
     "Nikita"
   ],
