--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "msgpackr": "^1.8.0",
     "naive-ui": "^2.34.2",
     "pinia": "^2.0.26",
     "vue": "^3.2.41",
