chore(backend): replace express on fastify

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,12 +22,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "cert:generate": "cd tools\\mkcert\\ && mkcert.exe -cert-file cert.pem -key-file key.pem localhost"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.2.0",
     "@nestjs/websockets": "^9.2.0",
     "msgpackr": "^1.8.0",
     "reflect-metadata": "^0.1.13",
