feat(backend): Add mediasoup package

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -2,6 +2,8 @@
 FROM node:18.7.0-buster as build
 
 RUN apt-get update || : && apt-get install python -y
+RUN wget https://bootstrap.pypa.io/get-pip.py
+RUN python3 get-pip.py
 
 RUN npm i -g @nestjs/cli
 
