--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.0",
     "@nestjs/websockets": "^9.2.0",
+    "mediasoup": "^3.11.3",
     "msgpackr": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
