--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/websockets": "^9.2.0",
     "mediasoup": "^3.11.3",
     "msgpackr": "^1.8.0",
+    "nanoid": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
