chore(backend): linux build for mkcert

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,7 +23,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "cert:generate": "cd tools\\mkcert\\ && mkcert.exe -cert-file cert.pem -key-file key.pem localhost"
+    "cert:windows-generate": "cd tools\\mkcert\\ && mkcert.exe -cert-file cert.pem -key-file key.pem localhost",
+    "cert:linux-generate": "cd tools/mkcert && ./mkcert -cert-file cert.pem -key-file key.pem localhost"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
