--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -32,7 +32,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.0",
     "@nestjs/websockets": "^9.2.0",
-    "mediasoup": "^3.11.3",
+    "mediasoup": "3.10.9",
     "msgpackr": "^1.8.0",
     "nanoid": "^3.3.4",
     "reflect-metadata": "^0.1.13",
