--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       MEDIASOUP_ANNOUNCED_IP: "185.93.109.80"
     container_name: voicel-backend-production
     restart: always
-    # volumes:
+    volumes:
       # for development
-      # - ./packages/backend:/usr/src/app
+      - ./packages/backend:/usr/src/app
     ports:
       - 10000-10100:10000-10100
       - 44444:44444
